@startuml
'https://plantuml.com/class-diagram
!include style.puml

title Updated Class Diagram
header Brooks and MacDonald
class "ServerView" as view {

update_order()
set_controller()

}

class "Restaurant" as resto{

notify_view()

}

class "OrderController" as ordercont{

cancel_changes()
update_order()


}

class "TableController" as cont{

create_ui()

}

class "Order" as order{

remove_unordered_items()
has_been_served()
place_new_orders()
remove_item()

}

class "OrderItem" as item{
str: state
can_be_cancelled()
has_been_served()
mark_as_ordered()
mark_as_cooking()
mark_as_ready()

}

class " KitchenController" as kcont{

updater()

}

resto<-view : restaurant

resto<--cont : restaurant
resto<--kcont : restaurant
resto<--ordercont : restaurant
order<--ordercont : order

view<--kcont : view
view<--ordercont : view
view<--cont :view

order-->item : 0...*
@enduml